--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
   </div>
 
 	<div id="copy">
-		<p class="text-center text-white text-sm">OG Creator <a
-			href="https://www.instagram.com/aoudumber.dev/reels/#">@aoudumber.dev</a></p>
+		<p class="text-center text-white text-sm">Sangu <a
+			
 	  </div>
 
   <script src="js/index.js"></script>
