--- a/love.html
+++ b/love.html
@@ -14,11 +14,11 @@
 
 <body>
 
-  <h1 class="title">I Love You 💗</h1>
+  <h1 class="title">I Love You Appu💗</h1>
 
 	<div id="copy">
-		<p class="text-center text-white text-sm">OG Creator <a
-			href="https://www.instagram.com/aoudumber.dev/reels/#">@aoudumber.dev</a></p>
+		<p class="text-center text-white text-sm">Sangu <a
+			
 	  </div>
 
   <script src='./js/three.min.js'></script>
